[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "np-running-wheel"
description = "Tools for getting running wheel data from Mindscope Neuropixels experiments."
authors = [{name = "Ben Hardcastle", email = "ben.hardcastle@alleninstitute.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://bjhardcastle.github.io/np_running_wheel"
Documentation = "https://bjhardcastle.github.io/np_running_wheel"
Changelog = "https://bjhardcastle.github.io/np_running_wheel/changelog"
Repository = "https://github.com/bjhardcastle/np_running_wheel"
Issues = "https://github.com/bjhardcastle/np_running_wheel/issues"
Discussions = "https://github.com/bjhardcastle/np_running_wheel/discussions"

[project.scripts]
np_running_wheel = "np_running_wheel.cli:main"

[tool.pdm]
version = {source = "scm"}
plugins = [
    "pdm-multirun",
]

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.10"]
ci-quality = ["np-running-wheel[duty,docs,quality,typing,security]"]
ci-tests = ["np-running-wheel[duty,tests]"]
docs = [
    "black>=23.1",
    "markdown-callouts>=0.2",
    "markdown-exec>=0.5",
    "mkdocs>=1.3",
    "mkdocs-coverage>=0.2",
    "mkdocs-gen-files>=0.3",
    "mkdocs-git-committers-plugin-2>=1.1",
    "mkdocs-literate-nav>=0.4",
    "mkdocs-material>=7.3",
    "mkdocs-minify-plugin>=0.6.4",
    "mkdocstrings[python]>=0.18",
    "toml>=0.10",
]
maintain = [
    "black>=23.1",
    "blacken-docs>=1.13",
    "git-changelog>=1.0",
]
quality = [
    "ruff>=0.0.246",
]
tests = [
    "pytest>=6.2",
    "pytest-cov>=3.0",
    "pytest-randomly>=3.10",
    "pytest-xdist>=2.4",
]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-pyyaml>=6.0",
    "types-toml>=0.10",
]
security = [
    "safety>=2",
]
